put html templates in embed

--- a/templates/public.tmpl
+++ b/templates/public.tmpl
@@ -1,6 +1,3 @@
-package main
-
-const publicServerTemplate = `
 <!DOCTYPE html>
 <html lang="en">
 
@@ -370,4 +367,4 @@ const publicServerTemplate = `
   </div>
 </body>
 
-</html>`
+</html>
