--- a/templates/private.tmpl
+++ b/templates/private.tmpl
@@ -356,7 +356,7 @@
 
       <h3 style="margin-top: 1.5rem;">Downloads</h3>
       <ul style="list-style: none; padding: 0; margin: 1rem 0;">
-        <li>• <a href="https://m45sci.xyz/relayClient/downloads/M45-Relay-Client-Win-latest.zip">M45-Relay-Client-Windows.zip</a></li>
+        <li>• <a href="https://m45sci.xyz/relayClient/downloads/M45-Relay-Client-Win-latest.zip">M45-Relay-Client-Windows.zip</a>(Windows 10 or newer)</li>
         <li>• <a href="https://m45sci.xyz/relayClient/downloads/M45-Relay-Client-Linux-latest.zip">M45-Relay-Client-Linux.zip</a></li>
         <li>• <a href="https://m45sci.xyz/relayClient/downloads/M45-Relay-Client-Mac-latest.zip">M45-Relay-Client-Mac.zip</a> (Universal Apple/Intel)</li>
       </ul>
