--- a/templates/private.tmpl
+++ b/templates/private.tmpl
@@ -354,7 +354,7 @@
         <li>Unusual ISP routing</li>
       </ul>
 
-      <h3 style="margin-top: 1.5rem;">Downloads</h3>
+      <h3 style="margin-top: 1.5rem;">Downloads (HTTPS Secure)</h3>
       <ul style="list-style: none; padding: 0; margin: 1rem 0;">
         <li>• <a href="https://m45sci.xyz/relayClient/downloads/M45-Relay-Client-Win-latest.zip">M45-Relay-Client-Windows.zip</a>(Windows 10 or newer)</li>
         <li>• <a href="https://m45sci.xyz/relayClient/downloads/M45-Relay-Client-Linux-latest.zip">M45-Relay-Client-Linux.zip</a></li>
