--- a/templates/private.tmpl
+++ b/templates/private.tmpl
@@ -285,7 +285,7 @@
   <!-- Header -->
   <header>
     <a href="https://m45sci.xyz/">
-      <img src="https://m45sci.xyz/m45-2024b-128.png" alt="M45-Science Logo" />
+      <img src="https://m45sci.xyz/img/m45.png" alt="M45-Science Logo" />
       <h1>M45-Science</h1>
       <h2>EU Relay Portal</h2>
     </a>
