--- a/templates/public.tmpl
+++ b/templates/public.tmpl
@@ -128,7 +128,7 @@
 <body>
   <header>
     <!-- Logo -->
-    <img class="logo" src="https://m45sci.xyz/m45-2024b-128.png" alt="M45 Logo" />
+    <img class="logo" src="https://m45sci.xyz/img/m45.png" alt="M45-Science Logo />
     <h1>M45-Science</h1>
     <h2>Bridge Connect Links:</h2>
   </header>
